--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
-   background: white;
+   /*background: white;*/
     font-size: 12px;
     font-family: 'Titillium Web', sans-serif;
     line-height: 175%;
     margin: 2% 2% 2% 2%;
     width: auto;
-    overflow:hidden;
+    /*border-color: blue;
+    border-style: solid;*/
 }
 a{
   color: #FB9281;
@@ -13,59 +14,88 @@ a{
 }
 a:hover{
   color: #FD7663;
+  font-weight: bold;
 }
 
 
 /********************************************************/
-.navbar{
+/*nav{
+  border-color: blue;
   border-style: solid;
-  border-color: #FB9281;
-}
-/*.navbar{
-  color: #000000;
-  list-style: none;   /*gets rid of bullet points
-  align-self: inherit;
-  text-align: right;  /*aligns to the right
-  font-size: 15px;
-}
-
-.navbar > li{
-  display: inline-block; /*puts everything on the same line (horizontal)
-  padding-right: 10px;
-}
-.navbar > li.rn{
-  text-align:left;
-  position:relative;
-  margin-top:-2%;
-}
-.navbar > li.rn > span{
-  background-color: black;
-  padding-right: 5px;
-  padding-left: 5px;
-  color:white;
-  font-size: 24px;
-}
-.navbar > li > a{
-  text-decoration: none;
-  color: #000000;
-}
-.navbar > li > a:hover{
-  color: tomato;
 }*/
 
+.navbar-light .navbar-nav .nav-link{
+  color: #FB9281;
+  opacity:100%;
+  font-size: large;
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+  color: #FD7663;
+  font-weight: bold;
+}
+
+.navbar-toggler.custom {
+   border-color:  #FB9281;
+}
+.navbar-toggler .fas.fa-bars {
+  color: #FB9281;
+ 
+}
+
 /********************************************************/
+.fas.fa-circle.one{
+  position: absolute;
+  color: #FB9281;
+  font-size: 10em;
+  bottom:5vw;
+  left:5vw;
+  z-index:-1;
+  opacity: .50;
+}
+
+.fas.fa-circle.two{
+  position: absolute;
+  color: #81fbba;
+  font-size: 14em;
+  bottom:25vw;
+  left:50vw;
+  z-index:-1;
+  opacity: .50;
+}
+
+.fas.fa-circle.three{
+  position: absolute;
+  color: #cf81fb;
+  font-size: 22em;
+  bottom:-8vw;
+  right:-4vw;
+  z-index:-1;
+  opacity: .50;
+}
+
+/*#title{
+  border-color: blue;
+  border-style: solid;
+}
+#secndBx{
+  border-color: blue;
+  border-style: solid;
+}*/
+
+#secndBx p{
+  margin-top: 6px;
+}
 #firstBox{
-  float:left;
-  width: 15%;
-  background: #FFF;
   padding: 1%; /*for text*/
   text-align: center;
   color: white;
   font-family: 'Titillium Web', sans-serif;
+ /* border-color: blue;
+  border-style: solid;*/
 }
 #firstBox > img.aboutBox-img{
   /*border-radius: 50%;*/
-  margin-top: 6px;
   width: 100%;
   height: auto; 
 }
@@ -92,90 +122,17 @@ a:hover{
   color: #000;
   font-size: 13px;
 }
-.ill_div{
-  width:250px;
-  height:120px;
-  background-color:  #1BB4D2;
-  float:left;
-}
 
-
-/********************************************************/
-#secondBox{
-  margin-top:auto;
-  float:left;
-  width: 50%;
-  height: 570px;
-  margin-left: 5%;
-  font-size:15px;
-  opacity: 0.8;
+/*.container {
+  border-color: blue;
   border-style: solid;
-  border-color: green;
-}
-/*
-.subbox{
-  height:40%;
-} */
-
-#secondBox h2.titles{
-  font-size: 24px;
-  font-weight: bold;
-  padding-bottom: 10px;
-  border-bottom: solid;
-  border-width: 2px;
-  border-color: #1BB4D2;
+  overflow:auto;
 }
 
-#secondBox p.authors{
-  margin-top: -10px;
-  opacity:0.75;
-  font-size: 12px;
-}
-
-
-#thirdBox {
-  margin-left:25px;
-  float:left;
-  width:280px;
-  height:550px;
-}
-#thirdBox img{
-  margin-left:25px;
-  float:left;
-  width:280px;
-  height:550px;
-}
-
-.content_holder{
-  margin:auto;
-  width:1300px;
-  height:570px;
-  background-color: none;
-  flex-grow: 1; 
+footer{
+ border-color: blue;
   border-style: solid;
-  border-color: black;
-}
-
-.main-footer {
-  height: 70px;
-  color: #1BB4D2;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
-
-}
-
-.main-footer .container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 40px;
-  flex-grow: 1;
-}
+}*/
 .footer-nav ul {
   display:flex;
   margin: 0;
